force-app/main/default/objects/Income__c/Income__c.object-meta.xml
<CustomObject>
    <description>Object for tracking income received.</description>
    <label>Income</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Income Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>