force-app/main/default/objects/Income__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>The way in which the income was received.</description>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Deposit</fullName>
            </value>
            <value>
                <fullName>Online Transfer</fullName>
            </value>
            <value>
                <fullName>Venmo Transfer</fullName>
            </value>
            <value>
                <fullName>Zelle Transfer</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>