force-app/main/default/objects/Income__c/fields/Reflected_Online__c.field-meta.xml
<CustomField>
    <fullName>Reflected_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked true if income received is shown on corresponding online statement or account balance.</description>
    <label>Reflected Online</label>
    <type>Checkbox</type>
</CustomField>