force-app/main/default/objects/Income__c/fields/Reimbursed_Expense__c.field-meta.xml
<CustomField>
    <fullName>Reimbursed_Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The expense that the reimbursement income corresponds to.</description>
    <label>Reimbursed Expense</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>Reimbursements</relationshipLabel>
    <relationshipName>Reimbursement</relationshipName>
    <type>Lookup</type>
</CustomField>