force-app/main/default/objects/Income__c/recordTypes/Employment.recordType-meta.xml
<RecordType>
    <fullName>Employment</fullName>
    <active>true</active>
    <description>Income received from day job.</description>
    <label>Employment</label>
</RecordType>