force-app/main/default/objects/Income__c/recordTypes/Music.recordType-meta.xml
<RecordType>
    <fullName>Music</fullName>
    <active>true</active>
    <description>Income earned from gigging or other music related pursuits.</description>
    <label>Music</label>
</RecordType>