force-app/main/default/objects/Income__c/recordTypes/Regular.recordType-meta.xml
<RecordType>
    <fullName>Regular</fullName>
    <active>true</active>
    <description>A standard, typical receipt of income. Not a reimbursement for a previously incurred expense.</description>
    <label>Regular</label>
</RecordType>