force-app/main/default/objects/Income__c/recordTypes/Reimbursement.recordType-meta.xml
<RecordType>
    <fullName>Reimbursement</fullName>
    <active>true</active>
    <description>A reimbursement for a previously incurred expense.</description>
    <label>Reimbursement</label>
</RecordType>